# job_board

./: .gitignore  README.md  pyproject.toml
job_board/front_board/: apps.py  views.py
job_board/job_board/: settings.py  urls.py
tests/: test_job_board.py
